docs(radio-button): fix radio button spacing (#14663)

--- a/src/material-examples/radio-overview/radio-overview-example.css
+++ b/src/material-examples/radio-overview/radio-overview-example.css
@@ -1,3 +1,3 @@
 .mat-radio-button ~ .mat-radio-button {
-  padding-right: 16px;
+  margin-left: 16px;
 }
